<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:paddingTop="20dp"
        android:layout_weight=".5"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total_Run"
            android:textSize="@dimen/label"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/total_runs"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/value"
            android:textSize="25sp" />


        <TextView
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total_miles"
            android:layout_gravity="center"
            android:textSize="@dimen/label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/total_miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/value"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_weight=".5"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Total_Cal"
            android:textSize="@dimen/label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/total_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/value"
            android:textSize="25sp" />

        <TextView
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total_time"
            android:textSize="@dimen/label"
            android:layout_gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"/>

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textSize="25sp"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>